Closed Bug 1476953 Opened 6 years ago Closed 6 years ago

TypeError: asm.js type error: asm.js Atomics only enabled when asmjs.atomics.enable is set

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox63 --- fixed

People

(Reporter: jujjyl, Assigned: bbouvier)

Details

Attachments

(1 file)

There is an outdated error message at https://dxr.mozilla.org/mozilla-central/source/js/src/wasm/AsmJS.cpp#2114 that says

> asm.js Atomics only enabled when asmjs.atomics.enable is set

Other places seem to refer to asmjs.atomics.enable pref as well. Such pref no longer exists, and adding that in about:config does nothing (the message still persists).

Instead the atomics support is controlled by setting environment variable

> set JIT_OPTION_asmJSAtomicsEnable=true

since https://bugzilla.mozilla.org/show_bug.cgi?id=1299359#c0

Perhaps the error message should print something like following?

> asm.js Atomics only enabled when Firefox was launched with environment variable "JIT_OPTION_asmJSAtomicsEnable=true" enabled
Thanks for the report, I'll update the error message.
Assignee: nobody → bbouvier
Status: NEW → ASSIGNED
Attachment #8993428 - Flags: review?(jdemooij)
Comment on attachment 8993428 [details] [diff] [review]
errormessage.patch

Review of attachment 8993428 [details] [diff] [review]:
-----------------------------------------------------------------

Ah, thanks.
Attachment #8993428 - Flags: review?(jdemooij) → review+
Pushed by bbouvier@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f9769a072e13
Update asm.js error message when atomics aren't enabled; r=jandem
https://hg.mozilla.org/mozilla-central/rev/f9769a072e13
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: