Bug 1476953: Update asm.js error message when atomics aren't enabled; r=jandem

--HG--
extra : rebase_source : 8c1a3c1e4c71ac901aad16a76a4dee79f350fe26
extra : amend_source : 667e2e310ff7d9910c739bc5cdcb457f76db3918